# SkillMatch

./: .env.example  .gitignore  COMMANDS.md  FIXES_SUMMARY.md  QA_REPORT.md  README.md  RELEASE_NOTES.md  VALIDATION_CHECKLIST.md  app.py  final_test.py  minimal_test.py  pyproject.toml  standalone_test.py  test_fix.py  test_import.py  verify_fixes.py
data/demo/: fullstack_junior.txt  junior_backend_java.txt  junior_python_developer.txt
src/skillmatch/adapters/: browser_usage_limit.py  plotters.py  streamlit_ui.py
src/skillmatch/adapters/browser_usage_limit_component/: index.html
src/skillmatch/ai/: __init__.py  gemini_client.py  prompts.py  schemas.py  scoring.py
src/skillmatch/config/: settings.py
src/skillmatch/domain/: entities.py  services.py
tests/: test_ai_scoring.py  test_browser_usage_limit.py  test_compatibility.py  test_compatibility_logic.py  test_compatibility_new.py  test_gemini_client.py  test_skill_extraction.py  test_streamlit_ai_ui.py
