[project]
name = "skillmatch"
version = "0.1.0"
description = "A portfolio‑grade skill matching SaaS MVP built with Streamlit, Pandas and Plotly"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Manuel", email = ""}]

[project.dependencies]
streamlit = "==1.38.0"
pandas = "==2.2.2"
plotly = "==5.24.1"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"skillmatch.adapters" = ["browser_usage_limit_component/*.html"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
